Refactored this class.
git-svn-id: svn+ssh://svn.code.sf.net/p/cmusphinx/code/trunk/sphinx4@569 94700074-3cef-4d97-a70e-9c8c206c02f5